--- a/social-network-app/package.json
+++ b/social-network-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://MiroslavMilosevic.github.io/SocialNetwork",
   "name": "social-network-app",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,8 @@
     "uuid": "^8.3.1"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
